@@ -1,6 +1,7 @@
 ???? - 4.2.4:
 
 Fixed bug 1481051 - false + UnusedNullCheckInEquals (and other false positives too)
+Fixed bug 1943204 - Ant task: <ruleset> path should be relative to Ant basedir
 
 August 31, 2008 - 4.2.3:
 
